# Lane-Line-Detection-System

./: .travis.yml  CMakeLists.txt  README.md  readme.md
app/: CMakeLists.txt  CameraModule.cpp  DriveHeadingModule.cpp  ImageProcessingModule.cpp  LaneLineDetectionSystem.cpp  main.cpp
doc/: doxy
doc/html/: _camera_module_8cpp.html  _camera_module_8cpp__incl.map  _camera_module_8cpp__incl.md5  _camera_module_8h.html  _camera_module_8h__dep__incl.map  _camera_module_8h__dep__incl.md5  _camera_module_8h__incl.map  _camera_module_8h__incl.md5  _camera_module_8h_source.html  _camera_module_test_8cpp.html  _camera_module_test_8cpp.js  _camera_module_test_8cpp__incl.map  _camera_module_test_8cpp__incl.md5  _drive_heading_module_8cpp.html  _drive_heading_module_8cpp__incl.map  _drive_heading_module_8cpp__incl.md5  _drive_heading_module_8h.html  _drive_heading_module_8h__dep__incl.map  _drive_heading_module_8h__dep__incl.md5  _drive_heading_module_8h__incl.map  _drive_heading_module_8h__incl.md5  _drive_heading_module_8h_source.html  _drive_heading_module_test_8cpp.html  _drive_heading_module_test_8cpp.js  (+67 more)
doc/latex/: files.tex  (+40 more)
include/: CameraModule.h  DriveHeadingModule.h  ImageProcessingModule.h  LaneLineDetectionSystem.h
results/: cppcheck  cpplint  valgrind_output_for_image_aftersuppression  valgrind_output_for_image_beforesuppression  valgrind_output_for_video_aftersuppression  valgrind_output_for_video_beforesuppression
test/: CMakeLists.txt  CameraModuleTest.cpp  DriveHeadingModuleTest.cpp  ImageProcessingModuleTest.cpp  LaneLineDetectionSystemTest.cpp  main.cpp
(+60 files in other folders)
